--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4987,6 +4987,9 @@ button.bg-gray:focus {
 .w-40 {
   width: 40% !important; }
 
+.w-10 {
+  width: 10% !important; }
+
 .w-25 {
   width: 25% !important; }
 
