--- a/assets/css/devices.css
+++ b/assets/css/devices.css
@@ -1,6 +1,8 @@
 @media only screen and (max-width: 600px) {
   .nav {visibility: collapse;}
   .main { padding: 20px; margin: -80px auto;}
+  .w-10 { width: 10% !important; }
+  .login-box, .forgot-box {padding: 20px;}
 }
 
 @media screen 
