--- a/assets/css/devices.css
+++ b/assets/css/devices.css
@@ -3,6 +3,11 @@
   .main { padding: 25px; margin: -80px auto;}
   .w-10 { width: 40% !important; }
   .login-box, .forgot-box {margin: 10px;}
+
+  /* Name - Welcome */
+  .welcome-title {font-size: 1.2rem; font-weight: 400;}
+  .badge-icon { margin-top:-110px;}
+  .badge-icon img {width: 20px;}
 }
 
 @media screen 
