--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,7 +74,9 @@ body {
 hr {
   box-sizing: content-box;
   height: 0;
-  overflow: visible; }
+  overflow: visible; 
+  /* border:1px solid #00cbff5e; */
+}
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
@@ -356,7 +358,7 @@ hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
   border: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1); }
+  border-top: 1px solid #00cbff5e; }
 
 small,
 .small {
@@ -1051,12 +1053,12 @@ pre {
   background-color: transparent; }
   .table th,
   .table td {
-    padding: 0.75rem;
+    padding: 0.35rem 1rem;
     vertical-align: top;
-    border-top: 1px solid #dee2e6; }
+    border-top: 1px solid #00cbff5e; }
   .table thead th {
     vertical-align: bottom;
-    border-bottom: 2px solid #dee2e6; }
+    border-bottom: 2px solid #00cbff5e; }
   .table tbody + tbody {
     border-top: 2px solid #dee2e6; }
   .table .table {
@@ -1076,7 +1078,7 @@ pre {
     border-bottom-width: 2px; }
 
 .table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.05); }
+  background-color:#00ccff21; }
 
 .table-hover tbody tr:hover {
   background-color: rgba(0, 0, 0, 0.075); }
@@ -2738,7 +2740,7 @@ tbody.collapse.show {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding: 9px 1rem; }
+  padding: 5px 1rem; }
   .navbar > .container,
   .navbar > .container-fluid {
     display: flex;
@@ -6289,10 +6291,12 @@ a.text-gray:hover, a.text-gray:focus {
   transition: all 0.5s;
   transition-delay: 0.25s;
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15); }
-  .navbar.navbar-ontop {
+  .navbar.navbar-ontop 
+  {
     background-color: transparent !important;
-    padding-top: 20px;
-    box-shadow: none !important; }
+    /* padding-top: 20px; */
+    /* box-shadow: none !important;  */
+  }
   .navbar .nav-item .nav-link {
     font-size: 10px;
     transition: background-color 0.4s;
@@ -7124,10 +7128,12 @@ form .form-group.is-invalid:after {
 
 .blockquote {
   border-left: none;
-  border: 1px solid #888;
-  padding: 20px;
+  border: 1px solid #00ccff5e;
+  padding: 10px 20px 15px 20px;
+  border-radius: 5px;
   font-size: 1.1em;
-  line-height: 1.8; }
+  /* line-height: 1.8;  */
+}
   .blockquote.blockquote-primary {
     border-color: #263d61 !important;
     color: #263d61 !important; }
