--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,8 @@
 /* Minor Styles */
 .btn-text {font-size: 1rem}
+.fa-8x {
+    font-size: 8em;
+}
 
 /* FLOATING LOGO BOTTOM */
 .feedback {
@@ -94,3 +97,110 @@ select:-webkit-autofill:focus {
     -webkit-box-shadow: 0 0 0px 1000px #fff inset;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;;
 }
+
+/* select starting stylings ------------------------------*/
+.select {
+      position: relative;
+      width: 100%;
+  }
+  
+  .select-text {
+      position: relative;
+      font-family: inherit;
+      background-color: transparent;
+      width: 100%;
+      padding: 0px 10px 7px 0px;
+      font-size: 1rem !important;
+      line-height: 1.6;
+      color: #263d61;
+      border-radius: 0;
+      border: none;
+      border-bottom: 1px solid rgb(242, 241, 244);
+  }
+  
+  /* Remove focus */
+  .select-text:focus {
+      outline: none;
+      border-bottom: 1px solid rgba(0,0,0, 0);
+  }
+  
+      /* Use custom arrow */
+  .select .select-text {
+      appearance: none;
+      -webkit-appearance:none
+  }
+  
+  .select:after {
+      position: absolute;
+      top: 18px;
+      right: 10px;
+      /* Styling the down arrow */
+      width: 0;
+      height: 0;
+      padding: 0;
+      content: '';
+      border-left: 6px solid transparent;
+      border-right: 6px solid transparent;
+      border-top: 6px solid rgba(0, 0, 0, 0.12);
+      pointer-events: none;
+  }
+  
+  
+  /* LABEL ======================================= */
+  .select-label {
+    position: absolute;
+    top: 0;
+    padding: 0px;
+    transition: all 200ms;
+    opacity: 0.6;
+    color: #263d61;
+  }
+  
+  /* active state */
+  .select-text:focus ~ .select-label, .select-text:valid ~ .select-label {
+    font-size: 75%;
+    -webkit-transform: translate3d(0, -100%, 0);
+            transform: translate3d(0, -100%, 0);
+    opacity: 1;
+  }
+  
+  /* BOTTOM BARS ================================= */
+  .select-bar {
+      position: relative;
+      display: block;
+      width: 100%;
+  }
+  
+  .select-bar:before, .select-bar:after {
+      content: '';
+      height: 1px;
+      width: 0;
+      bottom: 1px;
+      position: absolute;
+      background: #00ccff;
+      transition: 0.2s ease all;
+  }
+  
+  .select-bar:before {
+      left: 50%;
+  }
+  
+  .select-bar:after {
+      right: 50%;
+  }
+  
+  /* active state */
+  .select-text:focus ~ .select-bar:before, .select-text:focus ~ .select-bar:after {
+      width: 50%;
+  }
+  
+  /* HIGHLIGHTER ================================== */
+  .select-highlight {
+      position: absolute;
+      height: 60%;
+      width: 100px;
+      top: 25%;
+      left: 0;
+      pointer-events: none;
+      opacity: 0.5;
+  }
