--- a/assets/css/devices.css
+++ b/assets/css/devices.css
@@ -8,6 +8,9 @@
   .welcome-title {font-size: 1.2rem; font-weight: 400;}
   .badge-icon { margin-top:-110px;}
   .badge-icon img {width: 20px;}
+
+  /* Settings Icon */
+  .fa-8x { font-size: 5em; }
 }
 
 @media screen 
