--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,6 +4,45 @@
     font-size: 8em;
 }
 
+/* RADIO BUTTON DESIGN */
+    .inline-radio {
+        display: flex;
+        border-radius: 3px;
+        overflow: hidden;
+        border: 1px solid #00CCFF;
+    }
+    .inline-radio div {
+        position: relative;
+        flex: 1;
+    }
+    .inline-radio input {
+        width: 100%;
+        height: 25px;
+        opacity: 0;
+    }
+    .inline-radio label {
+        position: absolute;
+        top: 0;
+        left: 0;
+        color: #b6b6b6;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        pointer-events: none;
+        /* border-right: 1px solid #253c62; */
+    }
+    .inline-radio div:last-child label {
+        border-right: 0;
+    }
+    .inline-radio input:checked + label {
+        background: #253c62;
+        font-weight: 500;
+        color: #fff;
+    }
+
 /* FLOATING LOGO BOTTOM */
 .feedback {
     background-color: #31B0D5;
@@ -141,7 +180,7 @@ select:-webkit-autofill:focus {
       content: '';
       border-left: 6px solid transparent;
       border-right: 6px solid transparent;
-      border-top: 6px solid rgba(0, 0, 0, 0.12);
+      border-top: 6px solid rgb(36, 59, 99);
       pointer-events: none;
   }
   
